# neural-network-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: dataset.rs  main.rs  neural_network.rs
src/activation_function/: activation_function.rs  mod.rs
src/cost_function/: cost_function.rs  mod.rs
src/data/: data.rs  dataset.rs  mod.rs
src/dataset/: example_datasets.rs
src/neural_network/: activation_function.rs  cost_function.rs  layer.rs  mod.rs  network.rs  optimizer.rs
src/neural_network/activation_function/: linear.rs  mod.rs  relu.rs  sigmoid.rs
src/neural_network/cost_function/: mod.rs  quadratic_cost.rs
src/neural_network/layer/: mod.rs
src/neural_network/optimizer/: adam_optimizer.rs  rmsprop_optimizer.rs  sgd_optimzer.rs
src/optimizer/: mod.rs  rmsprop_optimizer.rs  sgd_optimzer.rs
src/plotter/: graph_plotter.rs  mod.rs  png_plotter.rs
