[package]
name = "neural-network"
version = "0.1.0"
edition = "2021"
description = "A neural network library"
authors = ["Manuel Lerchner"]
license = "MIT OR Apache-2.0"
keywords = ["neural-network", "machine-learning"]
categories = ["science::artificial-intelligence"]
repository = "https://github.com/ManuelLerchner/neural-network"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
itertools = "0.8"
png = "0.17.6"
plotters = "0.3.4"